Fix spacing between components to take up whole page width

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 #body {
     background-color: var(--background-color);
+    justify-content: space-around;
 }
 
 .flex-row{
